--- a/lab-james/package.json
+++ b/lab-james/package.json
@@ -7,11 +7,13 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "eslint": "eslint src"
   },
   "author": "jrzollin@yahoo.com",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^4.7.2",
     "expect": "^21.1.0",
     "mocha": "^3.5.3"
   }
