--- a/lab02-joel/package.json
+++ b/lab02-joel/package.json
@@ -15,5 +15,16 @@
     "chai": "^4.1.2",
     "expect": "^21.1.0",
     "mocha": "^3.5.3"
-  }
+  },
+  "devDependencies": {
+    "mocha": "^3.5.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JBEpstein/lab-02-tools-and-context.git"
+  },
+  "bugs": {
+    "url": "https://github.com/JBEpstein/lab-02-tools-and-context/issues"
+  },
+  "homepage": "https://github.com/JBEpstein/lab-02-tools-and-context#readme"
 }
