--- a/lab-kyle/package.json
+++ b/lab-kyle/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "lint": "eslint **/*.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,8 @@
   "license": "MIT",
   "devDependencies": {
     "expect": "^21.1.0",
-    "mocha": "^3.5.3"
+    "mocha": "^3.5.3",
+    "eslint": "^4.7.2"
   },
   "homepage": "https://github.com/krichey15/lab-02-tools-and-context#readme"
 }
