--- a/lab-cole/package.json
+++ b/lab-cole/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.js",
   "directories": {
+    "lib": "lib",
     "test": "test"
   },
   "dependencies": {},
   "devDependencies": {
-    "eslint": "^4.7.2",
+    "eslint": "^4.8.0",
+    "expect": "^21.2.1",
     "mocha": "^3.5.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC"
